Add parameter of master count to control the number of master nodes on the cluster to be provisioned, and add few info log lines
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/deployer/infra/templates/manifest.j2
+++ b/deployer/infra/templates/manifest.j2
@@ -59,7 +59,7 @@ cluster:
 
     controlPlane:
       name: master
-      replicas: 3
+      replicas: {{ MASTER_COUNT }}
 
     compute:
       - name: worker
